objects/ccpt__Minute__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Agenda_Item__c</fullName>
        <label>Agenda Item</label>
        <referenceTo>ccpt__Agenda_Item__c</referenceTo>
        <relationshipLabel>Minutes</relationshipLabel>
        <relationshipName>Minutes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpt__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__IsDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For internal use only.  Defines whether or not the record is a draft and allows tracking for editing across multiple clients (incorrect use of this field may result in deletion of a record).</description>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>